# hatiko-test

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/api/: main.py  router.py  schemas.py
src/api/services/imei_service/: __init__.py  exceptions.py  imei_api_service.py  schemas.py
src/bot/: bot.py
src/bot/handlers/: __init__.py  check_imei.py  info.py  main.py
src/bot/middlewares/: __init__.py  whitelist.py
src/bot/utils/: __init__.py  delete_message.py  keyboards.py  logger.py  menu_commands.py  validators.py  welcome_message.py
src/core/: config.py
